Cleaning up unused things from oauth.

--- a/app.json
+++ b/app.json
@@ -17,6 +17,10 @@
       "SLACK_BOT_TOKEN": {
         "description": "The bot token found within the Slack API settings.",
         "value": "replace_me"
-      }  
+      },
+      "SLAC_USER_TOKEN": {
+        "description": "The token for the user authorizing the bot.",
+        "value": "replace_me"
+      }
     }
   }
