--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-slackclient = "*"
-flask = "*"
-requests = "*"
-gunicorn = "*"
+slackclient = "1.3"
 
 [dev-packages]
 
