Changing access token to user token
To make this mroe clear I'm adjusting the access token const to user token.

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
         "description": "The bot token found within the Slack API settings.",
         "value": "replace_me"
       },
-      "SLAC_USER_TOKEN": {
+      "SLACK_USER_TOKEN": {
         "description": "The token for the user authorizing the bot.",
         "value": "replace_me"
       }
