--- a/app.json
+++ b/app.json
@@ -12,23 +12,33 @@
     "env": {
       "BOT_ID": {
         "description": "The ID of your Slack bot user, this is required so the bot knows when a command is directed at it. If you're unsure what your bot ID is you can run bot_id.py which will print the ID, you'll need to make sure that the BOT_NAME field within the file corresponds with the one you setup in the Slack interface.",
-        "value": "replace_me"
+        "value": "replace_me",
+        "required": true
       },
       "SLACK_BOT_TOKEN": {
         "description": "The bot token found within the Slack API settings.",
-        "value": "replace_me"
+        "value": "replace_me",
+        "required": true
       },
       "SLACK_USER_TOKEN": {
-        "description": "The token for the user authorizing the bot.",
-        "value": "replace_me"
+        "description": "The token for the user authorizing the bot found within Slack API settings. This must be the user token of an admin.",
+        "value": "replace_me",
+        "required": true
       },
       "AWS_ACCESS_KEY_ID": {
         "description": "The access key ID for AWS. If you don't want to persist the bots settings outside of memory do not include this.",
-        "value": ""
+        "value": "",
+        "required": false
       },
       "AWS_SECRET_ACCESS_KEY": {
         "description": "The secret access key ID for AWS. If you don't want to persist the bots settings outside of memory do not include this.",
-        "value": ""
+        "value": "",
+        "required": false
+      },
+      "CHANNEL_WHITELIST": {
+        "description": "A comma seperated list of channels you'd like the bot to be able to join, if left blank the bot can join all channels, for example 'general, random'.",
+        "value": "",
+        "required": false
       }
     }
   }
